--- a/resources/link-cards.less
+++ b/resources/link-cards.less
@@ -1,4 +1,41 @@
+@import 'mediawiki.skin.variables.less';
+
 @ext-linkcards-space: 12px;
+
+// General layout.
+
+.ext-linkcards {
+	display: flex;
+
+	.ext-linkcards-card {
+		width: 100%;
+		max-width: 100%;
+		flex: 1 0 0;
+		padding: 1em;
+
+		&:first-child {
+			padding-left: 0;
+		}
+
+		&:last-child {
+			padding-right: 0;
+		}
+	}
+}
+
+@media screen and ( max-width: @width-breakpoint-tablet ) {
+	.ext-linkcards {
+		display: block;
+
+		.ext-linkcards-card {
+			flex: none;
+			padding: 0;
+			margin: 1em 0;
+		}
+	}
+}
+
+// Individual cards.
 
 .ext-linkcards-card a {
 	display: flex;
@@ -53,6 +90,7 @@
 			display: block;
 			position: absolute;
 			object-fit: cover;
+			object-position: 50% 50%;
 			min-width: 100%;
 			min-height: 100%;
 		}
