--- a/resources/link-cards.less
+++ b/resources/link-cards.less
@@ -91,8 +91,8 @@
 			position: absolute;
 			object-fit: cover;
 			object-position: 50% 50%;
-			min-width: 100%;
-			min-height: 100%;
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
