Add 'perrow' argument and fix various outdated things
* Fix deprecations.
* Add new 'perrow' parser fuction argument.
* Update dependencies.

--- a/resources/link-cards.less
+++ b/resources/link-cards.less
@@ -6,12 +6,14 @@
 
 .ext-linkcards {
 	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 1em;
 
 	.ext-linkcards-card {
 		width: 100%;
 		max-width: 100%;
 		flex: 1 0 0;
-		padding: 1em;
 
 		&:first-child {
 			padding-left: 0;
